launch4j replaced by self-written Golang launcher